--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Compliant Platform as a Service | Datica Cloud Compliance"
-summary: "Compliant Platform as a Service (CPaaS) is a turnkey compliant cloud platform perfectly designed for digital health applications."
+summary: "Compliant Platform as a Service (CPaaS) is no longer available. Learn more about our new compliance solutions."
 navTitle: "Datica CPaaS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
