CPaaS page copy updates

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -36,7 +36,8 @@ section.masthead.bg-dark.bg-blue-green-grad.product-cpaas.relative
             h1.headline-3.text-bold.margin-bottom-sm Compliant Platform as a Service
     .row.align-center
       .columns.small-12.medium-6.large-5
-        h3.headline-4 CPaaS is no longer available.
+        / h3.headline-4 CPaaS is no longer available.
+        p <strong>CPaaS is not currently on-boarding new customers</strong> as we evaluate infrastructure changes. Current customers can find support documentation and information <a class="link--light" href="https://help.datica.com/hc/en-us#cpaasDocs">here</a>.
         p Do you need compliant infrastructure, with the power of Kubernetes orchestration? 
         = partial "partials/snippets/button", :locals => { :label => "Explore CKS", :url => "/compliant-kubernetes-service", :button_classes => "button button--light group step-2", :data_track_group => "compliance", :item_id => "get-cks", :icon => "icon-chevron-right", :icon_align => "right", :expand => "false" }
         p Looking for complete cloud compliance, and real-time compliance monitoring?
