Summary, share image update

--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Compliant Platform as a Service | Datica Cloud Compliance"
-summary: "Compliant Platform as a Service (CPaaS) is no longer available. Learn more about our new compliance solutions."
+summary: "Compliant Platform as a Service (CPaaS) not currently on-boarding new customers. Learn more about our new compliance solutions at datica.com/compliance."
 navTitle: "Datica CPaaS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
@@ -18,7 +18,7 @@ ruby:
   # bg_image = '/public/icons/inlined/bg-circles-fill.svg'
   current_page.data.asset_preload = '<link href="' + bg_image + '" rel="preload" as="image" />'
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
-  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/5nhUL1CBYQIKy4Qu822yws/2dda37e98f8e57a82a289d9e324e494b/share-cpaas-2.jpg'
+  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/4822d250b4eb05924aa530dbd1ccf73f/working_together__looking_at_screen.jpg'
   the_form = data.site.forms['5KUwvp8WsgiIOscYKq0SaK']
 
 / <style type="text/css">.product-bg {background-image: url(#{bg_image});}</style>
